[gd_scene load_steps=2 format=3 uid="uid://cqqdgqhkenktn"]

[ext_resource type="Script" uid="uid://cspiblxdsw5er" path="res://scenes/dock/dock.gd" id="1_h5dr1"]

[node name="Dock" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5dr1")

[node name="Panel" type="Panel" parent="."]
layout_mode = 2

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="detach_requested" from="." to="." method="_on_detach_requested"]
